fix link color on mobile

--- a/FEM/blog-preview-card/style.css
+++ b/FEM/blog-preview-card/style.css
@@ -24,7 +24,7 @@ main {
     img {
         display: block;
         object-fit: cover;
-        width: 280px;
+        width: 100%;
         height: 200px;
         border-radius: 0.7rem;
         margin-bottom: 1.7rem;
@@ -45,6 +45,7 @@ main {
 
 a {
     text-decoration: none;
+    color: #000000;
 }
 
 
